# KojeomGameEngine

./: .gitignore  AGENTS.md  CMakeLists.txt  KojeomEngine.sln  README.md
.claude/: CLAUDE.md
.gemini/: GEMINI.md
.github/: dependabot.yml
.github/workflows/: build.yml
Editor/EngineInterop/: EngineAPI.cpp  EngineAPI.h  EngineInterop.vcxproj
Editor/KojeomEditor/: App.xaml  App.xaml.cs  KojeomEditor.csproj  MainWindow.xaml  MainWindow.xaml.cs
Engine/: Engine.vcxproj
Engine/Assets/: Animation.cpp  Animation.h  AnimationInstance.cpp  AnimationInstance.h  AnimationStateMachine.cpp  AnimationStateMachine.h  BlendTree.cpp  BlendTree.h  LightComponent.cpp  LightComponent.h  ModelLoader.cpp  ModelLoader.h  SkeletalMeshComponent.cpp  SkeletalMeshComponent.h  Skeleton.cpp  Skeleton.h  StaticMesh.cpp  StaticMesh.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Engine/Audio/: AudioManager.cpp  AudioManager.h  AudioSubsystem.h  AudioTypes.h  Sound.cpp  Sound.h
Engine/Core/: Engine.cpp  Engine.h  Subsystem.h
Engine/DebugUI/: DebugUI.cpp  DebugUI.h
Engine/Graphics/: Camera.cpp  Camera.h  GraphicsDevice.cpp  GraphicsDevice.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderModule.h  RenderModules.h  RenderSubsystem.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/Input/: InputManager.cpp  InputManager.h  InputSubsystem.h  InputTypes.h
Engine/Physics/: PhysicsSubsystem.h  PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
Engine/Scene/: Actor.cpp  Actor.h  SceneManager.cpp  SceneManager.h
Engine/Serialization/: BinaryArchive.cpp  BinaryArchive.h  JsonArchive.cpp  JsonArchive.h
Engine/UI/: UIButton.cpp  UIButton.h  UICanvas.cpp  UICanvas.h  UICheckbox.cpp  UICheckbox.h  UIElement.cpp  UIElement.h  UIFont.cpp  UIFont.h  UIGridLayout.cpp  UIGridLayout.h  UIHorizontalLayout.cpp  UIHorizontalLayout.h  UIImage.cpp  UIImage.h  UILayout.cpp  UILayout.h  UIPanel.cpp  UIPanel.h  UISlider.cpp  UISlider.h  UIText.cpp  UIText.h  UITypes.h  UIVerticalLayout.cpp  UIVerticalLayout.h
Engine/Utils/: CLI.h  Common.h  Logger.h  Math.h
Examples/: AdvancedExample.cpp  AdvancedExample.vcxproj  BasicExample.cpp  BasicExample.vcxproj  TriangleExample.cpp  TriangleExample.vcxproj
Scenes/: TestScene.json
Source/: Main.cpp
Source/Animation/: AnimationClip.cpp  AnimationClip.h  Skeleton.h
Source/App/: AppMode.h  Clock.h  CommandLine.h  Engine.cpp  Engine.h
Source/Assets/: AssetStore.cpp  AssetStore.h
Source/Core/: AppConfig.h  Assert.h  FileSystem.h  Log.cpp  Log.h  StringId.h
Source/Game/: SampleGame.h
Source/Math/: Transform.h
Source/Platform/: GlfwInput.h  GlfwWindow.h  IInput.h  IWindow.h
Source/Renderer/: RenderScene.h  Renderer.cpp  Renderer.h
Source/World/: NativeBehavior.h  World.cpp  World.h
Tests/: TestFramework.h  UnitTests.cpp
docs/: EngineArchitecture.md  README.md  api-reference.md  architecture.md  ci.md  coding-standards.md  getting-started.md  rendering-pipeline.md  samples-guide.md
docs/assets/: AssetSystem.md
docs/audio/: AudioSystem.md
docs/editor/: EditorGuide.md
docs/input/: InputSystem.md
docs/plans/: ComprehensiveDevelopmentPlan.md  ExamplesOverview.md  RendererDevelopmentPlan.md  SamplesOverview.md  UISystemDevelopmentPlan.md
docs/renderer/: DirectX11Renderer.md
docs/rules/: AIAgentRules.md
docs/scene/: SceneSystem.md
docs/serialization/: SerializationSystem.md
docs/utils/: UtilsSystem.md
pipeline/: check.ps1  content.ps1  document.ps1  document.sh  run-task.ps1
samples/AnimationStateMachine/: AnimationStateMachineSample.cpp  AnimationStateMachineSample.vcxproj
samples/BasicRendering/: BasicRenderingSample.cpp  BasicRenderingSample.vcxproj
samples/CLITestRunner/: CLITestRunner.cpp  CLITestRunner.vcxproj  CLITestRunnerTests.h
samples/DebugRendering/: DebugRenderingSample.cpp  DebugRenderingSample.vcxproj
samples/Gameplay/: GameplaySample.cpp  GameplaySample.vcxproj
samples/LOD/: LODSample.cpp  LODSample.vcxproj
samples/Lighting/: LightingSample.cpp  LightingSample.vcxproj
samples/PBR/: PBRSample.cpp  PBRSample.vcxproj
samples/Particles/: ParticlesSample.cpp  ParticlesSample.vcxproj
samples/Physics/: PhysicsSample.cpp  PhysicsSample.vcxproj
samples/PostProcessing/: PostProcessingSample.cpp  PostProcessingSample.vcxproj
samples/SkeletalMesh/: SkeletalMeshSample.cpp  SkeletalMeshSample.vcxproj
samples/Sky/: SkySample.cpp  SkySample.vcxproj
samples/Terrain/: TerrainSample.cpp  TerrainSample.vcxproj
samples/UI/: UISample.cpp  UISample.vcxproj
samples/Water/: WaterSample.cpp  WaterSample.vcxproj
work/: check.md  work.md  work_check.md  work_content.md  work_document.md
work/architecture/: 00_Overview.md  01_Runtime_Architecture.md  02_Feature_Roadmap.md  03_Testing_Quality_Maintenance.md  (+3 more)
(+92 files in other folders)
